<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:background="@android:color/white">

  <LinearLayout style="@style/publicRelationSection">

    <View style="@style/publicRelationSectionSpacing" />

    <TextView
      style="@style/publicRelationRowHeader"
      android:text="@string/public_relation_activity_basic_info" />

    <View style="@style/publicRelationDivider" />

    <LinearLayout style="@style/publicRelationRows">

      <LinearLayout style="@style/publicRelationRow">

        <TextView
          style="@style/publicRelationLabel"
          android:text="@string/public_relation_activity_name" />

        <TextView
          android:id="@+id/public_relation_activity_name"
          style="@style/publicRelationContent"
          android:text="asdfasdf" />
      </LinearLayout>

      <LinearLayout style="@style/publicRelationRow">

        <TextView
          style="@style/publicRelationLabel"
          android:text="@string/public_relation_activity_time" />

        <TextView
          android:id="@+id/public_relation_activity_time"
          style="@style/publicRelationContent" />
      </LinearLayout>

      <LinearLayout style="@style/publicRelationRow">

        <TextView
          style="@style/publicRelationLabel"
          android:text="@string/public_relation_activity_location" />

        <TextView
          android:id="@+id/public_relation_activity_location"
          style="@style/publicRelationContent" />
      </LinearLayout>

      <LinearLayout style="@style/publicRelationRow">

        <TextView
          style="@style/publicRelationLabel"
          android:text="@string/public_relation_activity_level" />

        <TextView
          android:id="@+id/public_relation_activity_level"
          style="@style/publicRelationContent" />
      </LinearLayout>

      <LinearLayout style="@style/publicRelationRow">

        <TextView
          style="@style/publicRelationLabel"
          android:text="@string/public_relation_activity_media_type" />

        <TextView
          android:id="@+id/public_relation_activity_media_type"
          style="@style/publicRelationContent" />
      </LinearLayout>

      <LinearLayout style="@style/publicRelationRow">

        <TextView
          style="@style/publicRelationLabel"
          android:text="@string/public_relation_activity_responsible_name" />

        <TextView
          android:id="@+id/public_relation_activity_responsible_name"
          style="@style/publicRelationContent" />
      </LinearLayout>

      <LinearLayout style="@style/publicRelationRow">

        <TextView
          style="@style/publicRelationLabel"
          android:text="@string/public_relation_activity_responsible_department" />

        <TextView
          android:id="@+id/public_relation_activity_responsible_department"
          style="@style/publicRelationContent" />
      </LinearLayout>

      <LinearLayout style="@style/publicRelationRow">

        <TextView
          style="@style/publicRelationLabel"
          android:text="@string/public_relation_activity_journalist" />

        <TextView
          android:id="@+id/public_relation_activity_journalist"
          style="@style/publicRelationContent" />
      </LinearLayout>

    </LinearLayout>

  </LinearLayout>

  <!--<LinearLayout style="@style/publicRelationSection">-->
    <!--<TextView style="@style/publicRelationRowHeader" android:text="@string/public_relation_activity_team_member"/>-->
    <!--<View style="@style/publicRelationDivider"/>-->
    <!--<LinearLayout style="@style/publicRelationRows" android:id="@+id/team_memberContainer" android:orientation="horizontal"></LinearLayout>-->
  <!--</LinearLayout>-->

  <LinearLayout style="@style/publicRelationSection">
    <View style="@style/publicRelationSectionSpacing"/>
    <TextView style="@style/publicRelationRowHeader" android:text="@string/public_relation_activity_more"/>
    <View style="@style/publicRelationDivider"/>
    <LinearLayout style="@style/publicRelationRows">
      <LinearLayout style="@style/publicRelationRow">
        <TextView style="@style/publicRelationLabel" android:text="@string/public_relation_activity_report_count" />
        <TextView style="@style/publicRelationContent" android:id="@+id/public_relation_activity_report_count"/>
      </LinearLayout>

      <LinearLayout
        style="@style/publicRelationRow">
        <TextView style="@style/publicRelationLabel" android:text="@string/public_relation_activity_sponsor" />
        <TextView style="@style/publicRelationContent" android:id="@+id/public_relation_activity_sponsor"/>
      </LinearLayout>

      <LinearLayout style="@style/publicRelationRow">
        <TextView style="@style/publicRelationLabel" android:text="@string/public_relation_activity_summary" />
        <TextView style="@style/publicRelationContent" android:id="@+id/public_relation_activity_summary"/>
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

</LinearLayout>
